# Projet_FAIRNESS

./: .gitignore  Projet_Fairness.ipynb  README.md  pyproject.toml
data/: metadata.csv
expe_log/age/: csv_in_WEIGHTS_AGE.csv  preds_age_rw.csv
expe_log/age/tensorboard_logs/version_0/: events.out.tfevents.1774917289.975490a1e821.4492.2
expe_log/baseline/: preds_baseline.csv
expe_log/gender/: preds_gender_rw.csv
old_not_important/: BERRAHMA_MI_PROJET.ipynb  MI_PROJET_Edu.ipynb  Projet.ipynb  Projet_analyze_et_preproc.ipynb  Projet_analyze_et_preproc_etpostproc.ipynb  Sipan-mi-projet.ipynb  main.py
old_not_important/.claude/worktrees/kind-shannon/: BERRAHMA_MI_PROJET.ipynb  Cobos_Fernandez_Eduardo.csv  MI_PROJET_Edu.ipynb  Projet.ipynb
old_not_important/Projet_Version_Finalle_files/: fui.core-143937dd.js  fui.util-630f47b5.js  initial.resx.js  odsp.util-60f40acf.js  oneuplightspeedwebpack.js  plt.items-view.js  plt.odsp-common.js  plt.office-ui-fabric-react.js
