[project]
name = "mi-projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aif360",
    "ipykernel",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "pytorch-lightning",
    "scikit-learn",
    "torch",
    "torchmetrics",
    "torchvision",
    "tqdm",
]
